# jk

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  cliff.toml  deny.toml  justfile  panache.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  product_direction.md
.github/workflows/: ci.yml  pages.yml  release-plz.yml
.plans/: 0000-index.md  0001-trusted-publishing.md  0002-branch-protection.md  0003-release-assets.md  0004-log-first-mvp.md  0005-log-mvp-review-hardening.md  0006-selected-change-diff.md  0007-auto-refresh-policy.md  0008-jj-integration-cleanup.md  blockers.md  command-deep-plans.md  docs-greenfield-coverage-2026-02-08.md  gold-command-details.md  gold-command-set.md  implementation-status.md  jk-clean-slate-v1-spec-2026-02-14.md  jk-tui-command-plan.md  module-refactor-execution-plan.md  nightly-checkpoint.md  prompt-approach-one-shot.md  readme-ui-compaction-2026-02-08.md  research-context.md  ux-screen-flow-overhaul-2026-02-08.md
.plans/improvements/: 2026-02-08-012555-ui-readme-compaction-suggestions.md  2026-02-08-012853-help-grouping-and-mode-badge.md  2026-02-08-013605-post-pass-ux-suggestions.md  2026-02-08-015556-directional-ux-docs-summary.md  2026-02-08-022120-jj-aligned-simplification-ideas.md  2026-02-08-114940-jk-vs-jjui-feature-gap-analysis.md  WORKFLOW.md
config/: keybinds.default.toml
crates/jk/: Cargo.toml  README.md
crates/jk-cli/: Cargo.toml  README.md
crates/jk-cli/src/: abandon.rs  command.rs  describe.rs  diff.rs  edit.rs  evolog.rs  lib.rs  log.rs  new.rs  operation.rs  recovery.rs  show.rs  status.rs  workspaces.rs
crates/jk-cli/src/log/: rendered.rs  semantic.rs
crates/jk-core/: Cargo.toml  README.md
crates/jk-tui/: Cargo.toml  README.md
crates/jk-tui/src/: ansi_text.rs  chrome.rs  command_history_view.rs  command_preview_view.rs  diff_state.rs  diff_view.rs  keymap.rs  lib.rs  log_state.rs  log_view.rs  operation_log_view.rs  rendered_log.rs  rendered_state.rs  rendered_view.rs  selected_row.rs  workspaces_view.rs
crates/jk/src/: actions.rs  cli.rs  clipboard.rs  command_history.rs  command_mode.rs  key.rs  main.rs  menus.rs  mutation_preview.rs  mutations.rs  operation_log.rs  refresh.rs  rendering.rs  root_views.rs  runner.rs  state.rs  test_support.rs  workspace_routes.rs  workspaces.rs
docs/: architecture.md  clean-slate-ui-spec.md  contributing-tests.md  glossary.md  golden-plan.md  navigation-behavior-checklist.md  process-observations.md  product-direction.md  product-plan.md  release-readiness-audit-2026-02-08.md  roadmap.md  screens.md  tutorial-vhs.md  usage.md  workbench.md  workflows.md
docs/adr/: 0001-jk-is-single-tui.md  0002-keybindings-and-safety.md  0003-command-registry-parity.md  README.md
docs/agent/: architecture.md  call-tree-cleanup-map.md  cleanup-wave-status.md  documentation.md  rust-style.md  source-cleanup-audit.md  source-maintainability-ledger.md  testing.md  workflow.md
docs/demo/: README.md  operation-recovery.tape  setup-demo-repo.sh  static-log.tape
docs/development/: README.md  bootstrap-downstream.md
docs/plan/: README.md  command-inventory.md  fragility-register.md  implementation-slices.md  integration-feasibility.md  integration-strategy.md  interaction-model.md  next-implementation-slices.md  open-questions.md  phases.md  progress.md  recommended-approach.md  screen-priority.md  screens.md  workflows.md
docs/plans/: 0001-command-spec.md  0002-keymap-help-data.md  0003-view-stack-foundation.md  0004-inspection-foundation.md  0005-log-template-selection.md  0006-searchable-command-discovery.md  0007-ordered-revision-marks.md  0008-view-options-overlay.md  0009-global-run-options-foundation.md  0010-selected-change-evolog.md  0011-adaptive-hotbar.md  0012-workspace-scope.md  0013-workspace-update-stale.md  0014-command-history-foundation.md  0015-safe-mutation-preview-foundation.md  0016-operation-recovery-foundation.md  0017-dogfood-backlog-order.md  0018-command-mode-mvp.md  0019-release-stabilization.md  cli-surface-addendum.md
docs/reference/: README.md  screens.md  view-model.md  workflows.md
docs/tutorials/: README.md  bookmarks-and-conflicts.md  daily-loop.md  rewrite-and-recovery.md
docs/vhs/: help-flow.tape  history-flow.tape  log-flow.tape  render.sh  scenarios.md  status-flow.tape  tutorial-dynamic-command-history.tape  tutorial-dynamic-navigation.tape  tutorial-dynamic-remote-ops.tape  tutorial-dynamic-safety.tape  tutorial-full-catalog.tape  tutorial-static-screens.tape
scripts/: package-release-archive.sh  reflow-rust-comments.py
src/: action_menu.rs  action_output.rs  alias.rs  app.rs  app_screen.rs  app_status.rs  bookmarks.rs  cli.rs  clipboard.rs  command.rs  commands.rs  config.rs  copy.rs  diff.rs  error.rs  file_list.rs  file_show.rs  flows.rs  graph.rs  help.rs  interactive_process.rs  jj.rs  jj_actions.rs  jj_rows.rs  jj_syntax.rs  keys.rs  main.rs  operation_detail.rs  operation_log.rs  rendered_jj.rs  rendered_rows.rs  resolve.rs  search.rs  selection.rs  show.rs  status.rs  status_line.rs  sticky_file_view.rs  theme.rs  tui.rs  (+3 more)
src/action_menu/: mod.rs  model.rs  path_actions.rs  revision_actions.rs
src/action_output/: tests.rs
src/action_pane/: mod.rs  tests.rs
src/actions/: git_sync.rs  (+2 more)
tapes/: help-overlay-scroll-compact.tape  help-overlay-scroll-narrow-tall.tape  help-overlay-scroll-wide.tape  help-overlay-scroll.tape  help-overlays.tape  jk-diff.tape  jk-log.tape  readme-diff.tape  readme-log.tape  release-smoke.tape
(+511 files in other folders)
