[package]
name = "jk"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Log-first TUI for Jujutsu (jj)"
readme = "README.md"
repository = "https://github.com/joshka/jk"
homepage = "https://github.com/joshka/jk"
documentation = "https://github.com/joshka/jk"
license = "MIT OR Apache-2.0"
keywords = ["jj", "jujutsu", "tui", "vcs"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ansi-to-tui = "8.0.1"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
shlex = "1.3.0"
thiserror = "2.0.11"
toml = "0.9.5"

[dev-dependencies]
insta = { version = "1.42.1", features = ["filters"] }
