[package]
name = "jk"
version = "0.1.0"
edition = "2024"

[lints.clippy]
fn_params_excessive_bools = "warn"

[dependencies]
ansi-to-tui = "8.0.1"
arboard = "3.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-macros = "0.7.0"
serde_json = "1.0.145"

[dev-dependencies]
insta = "1.43.2"
