[workspace]
members = [
    "crates/jk",
    "crates/jk-cli",
    "crates/jk-core",
    "crates/jk-tui",
]
default-members = ["crates/jk"]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
homepage = "https://www.joshka.net/jk/"
repository = "https://github.com/joshka/jk"

[workspace.dependencies]
ansi-to-tui = "8.0.1"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16.2"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
