[package]
name = "jk-cli"
description = "Command-line entry points and jj integration helpers for jk"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jk-core = { path = "../jk-core", version = "0.2.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
