[package]
name = "jk"
description = "A log-first terminal UI for Jujutsu"
documentation = "https://docs.rs/jk"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
]
keywords = ["jj", "jujutsu", "ratatui", "terminal", "tui"]
categories = ["command-line-interface", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
jk-cli = { path = "../jk-cli", version = "0.2.1" }
jk-tui = { path = "../jk-tui", version = "0.2.1" }
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Keep this URL in sync with scripts/package-release-archive.sh and the
# release-plz asset workflow. cargo-binstall expands these placeholders and
# expects a root-level `jk` binary inside each .tgz archive.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[lints]
workspace = true
